--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "bootstrap": "^3.4.1",
     "bootstrap-icons": "^1.4.1",
     "core-js": "^3.6.5",
+    "echarts": "^5.1.2",
     "element-plus": "^1.0.2-beta.41",
     "jquery": "^2.2.4",
     "mockjs": "^1.1.0",
     "vue": "^3.0.0",
+    "vue-echarts": "^6.0.0-rc.6",
     "vue-router": "^4.0.6",
     "vuex": "^4.0.0-0"
   },
